Fix button spacing and colouring issue

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -265,3 +265,18 @@ html[data-theme="dark"] .topBannerTitleText {
 .test-marker-site-index-page {
   content: "site-index-page";
 }
+
+.buttonContainer {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.buttonContainer .button,
+.buttonContainer .button:hover {
+  color: black;
+}
+
+.buttonContainer .button:last-of-type {
+  margin: 0px 36px;
+}
